@@ -16,7 +16,8 @@ useDynLib(SeqArray,
     SEQ_Apply_Variant, SEQ_Apply_Sample, SEQ_BApply_Variant,
     SEQ_ConvBED2GDS,
     SEQ_SelectFlag, SEQ_ResetChrom,
-    SEQ_SetProcess, SEQ_AppendFill, SEQ_ClearVarMap, SEQ_BufferPosition,
+    SEQ_SetProcess, SEQ_SetProcessBlock,
+    SEQ_AppendFill, SEQ_ClearVarMap, SEQ_BufferPosition,
     SEQ_Pkg_Init,
     SEQ_bgzip_create, SEQ_Progress, SEQ_ProgressAdd,
     SEQ_Unit_SlidingWindows,
